entrance ready, background pattern-main, content++

--- a/02.MainPage.html
+++ b/02.MainPage.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>Elysium in SoftUni BG - MainPage</title>
+    <link href="02.MainPage-styles.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -31,8 +32,8 @@
             	<li>News</li>
                 <li>Archive</li>
             	<li>Contacts</li>
-                <li><a href="http://validator.w3.org"><img src=""</a></li>
-                <li><a href="http://css-validator.org><img src=""</a></li>
+                <li><a href="http://validator.w3.org"><img src="pictures/" /></a></li>
+                <li><a href="http://css-validator.org"><img src="pictures/" /></a></li>
             </ul>
         </nav>
     </footer>
