--- a/01.Entrance.html
+++ b/01.Entrance.html
@@ -1,7 +1,7 @@
 ﻿<DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Elysium in SoftUni BG - Entrance</title>
+    <title>Entrance - Team Elysium in SoftUni BG</title>
     <link href="01.Entrance-styles.css" rel="stylesheet" />
     
 </head>
