--- a/02.MainPage.html
+++ b/02.MainPage.html
@@ -1,24 +1,24 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Elysium in SoftUni BG - MainPage</title>
+    <title>MainPage - Team Elysium in SoftUni BG</title>
     <link href="02.MainPage-styles.css" rel="stylesheet" />
 </head>
 <body>
     <header>
         <h1> Elysium in SoftUni - BG</h1>
-    </header>
-    <section id="nav">
-        <nav>
-            <ul>
-            	<li>Home</li>
-                <li>About</li>
-            	<li>News</li>
-                <li>Archive</li>
-            	<li>Contacts</li>
-            </ul>
-        </nav>
+        <section id="nav">
+            <nav>
+                <ul>
+            	    <li><a href="02.MainPage.html">Home</a></li>
+                    <li><a href="03.About.html">About</a></li>
+            	    <li><a href="04.News.html">News</a></li>
+                    <li><a href="05.Archive.html">Archive</a></li>
+            	    <li><a href="06.Contacts.html">Contacts</a></li>
+                </ul>
+            </nav>
     </section>
+    </header>
     <section id="main">
         <article>
             
@@ -27,13 +27,13 @@
     <footer>
         <nav>
             <ul>
-            	<li>Home</li>
-                <li>About</li>
-            	<li>News</li>
-                <li>Archive</li>
-            	<li>Contacts</li>
-                <li><a href="http://validator.w3.org"><img src="pictures/" /></a></li>
-                <li><a href="http://css-validator.org"><img src="pictures/" /></a></li>
+            	<li><a href="02.MainPage.html">Home</a></li>
+                <li><a href="03.About.html">About</a></li>
+            	<li><a href="04.News.html">News</a></li>
+                <li><a href="05.Archive.html">Archive</a></li>
+            	<li><a href="06.Contacts.html">Contacts</a></li>
+                <li><a href="http://validator.w3.org"><img src="pictures/html-valid.png" /></a></li>
+                <li><a href="http://css-validator.org"><img src="pictures/css-valid.png" /></a></li>
             </ul>
         </nav>
     </footer>
