news updated, about and entrance, main-styles.css added

--- a/02.MainPage.html
+++ b/02.MainPage.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>MainPage - Team Elysium in SoftUni BG</title>
+    <link href="main-styles.css" rel="stylesheet" />
     <link href="02.MainPage-styles.css" rel="stylesheet" />
 </head>
 <body>
