--- a/04.News.html
+++ b/04.News.html
@@ -1,16 +1,31 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>News - Team Elysium</title>
+    <title>News - Team Elysium in SoftUni BG</title>
+    <link href="main-styles.css" rel="stylesheet" />
+    <link href="04.News-styles.css" rel="stylesheet" />
 </head>
 <body>
+    <header>
+        <h1> News </h1>
+        <section id="nav">
+            <nav>
+                <ul>
+            	    <li><a href="02.MainPage.html">Home</a></li>
+                    <li><a href="03.About.html">About</a></li>
+            	    <li><a href="04.News.html">News</a></li>
+                    <li><a href="05.Archive.html">Archive</a></li>
+            	    <li><a href="06.Contacts.html">Contacts</a></li>
+                </ul>
+            </nav>
+    </section>
+    </header>
     <article>
         <header>
             <h1> Pictures and Funny Mixtures</h1>
             <ul>
             	<li>
                     <figure>
-                        <img src="pictures/revenge.jpg" />
                     </figure>
                     <figcaption>Students' Revenge</figcaption>
                     
@@ -19,5 +34,18 @@
             </ul>
         </header>
     </article>
+    <footer>
+        <nav>
+            <ul>
+            	<li><a href="02.MainPage.html">Home</a></li>
+                <li><a href="03.About.html">About</a></li>
+            	<li><a href="04.News.html">News</a></li>
+                <li><a href="05.Archive.html">Archive</a></li>
+            	<li><a href="06.Contacts.html">Contacts</a></li>
+                <li><a href="http://validator.w3.org"><img src="pictures/html-valid.png" /></a></li>
+                <li><a href="http://css-validator.org"><img src="pictures/css-valid.png" /></a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
