--- a/02.MainPage.html
+++ b/02.MainPage.html
@@ -16,6 +16,7 @@
             	    <li><a href="04.News.html">News</a></li>
                     <li><a href="05.Archive.html">Archive</a></li>
             	    <li><a href="06.Contacts.html">Contacts</a></li>
+					<li><a href="07.Game.html">Game</a></li>
                 </ul>
             </nav>
     </section>
