Contacts added, clean main-styles.css

--- a/02.MainPage.html
+++ b/02.MainPage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1> Elysium in SoftUni - BG</h1>
+        <h1> Main Page - Elysium in SoftUni - BG</h1>
         <section id="nav">
             <nav>
                 <ul>
