--- a/03.About.html
+++ b/03.About.html
@@ -7,53 +7,52 @@
 
 </head>
 <body>
-    <div id="wrapper">
-        <header>
-            <h1>About Team Elysium</h1>
-            <section id="nav">
-                <nav>
-                    <ul>
-                        <li><a href="02.MainPage.html">Home</a></li>
-                        <li><a href="03.About.html">About</a></li>
-                        <li><a href="04.News.html">News</a></li>
-                        <li><a href="05.Archive.html">Archive</a></li>
-                        <li><a href="06.Contacts.html">Contacts</a></li>
-                    </ul>
-                </nav>
-            </section>
-        </header>
-        <section id="main">
-            <h2>team elysium</h2>
-            <article>
-                This is a project of Team Elysium from Sofware University Bulgaria. Our mission is to have fun coding HTML and CSS. Below can be seen the team members and their names. We all thank SoftUni for the opportunity to be creative and this website is the following evidence. If you feel you know a lot about programming and computers try to solve some solutions at their <a href="http://judge.softuni.bg/">Judge system </a>.
-            </article>
-            <section id="profiles">
-                <div>
-                    <figcaption>Momchil Dishev</figcaption>
-                    <figure id="momchil">
-                    </figure>
-                </div>
-                <div>
-                    <figcaption>Georgi Lambov</figcaption>
-                    <figure id="georgi"></figure>
-                </div>
-                <div>
-                    <figcaption>Petar Rusev</figcaption>
-                    <figure id="petar"></figure>
-                </div>
-                <div>
-                    <figcaption>Apostol Nikov</figcaption>
-                    <figure id="apostol"></figure>
-                </div>
-                <div>
-                    <figcaption>I.Ivelin</figcaption>
-                    <figure id="ivelin">
-                    </figure>
-                </div>
-
-            </section>
+    <header>
+        <h1>About </h1>
+        <section id="nav">
+            <nav>
+                <ul>
+                    <li><a href="02.MainPage.html">Home</a></li>
+                    <li><a href="03.About.html">About</a></li>
+                    <li><a href="04.News.html">News</a></li>
+                    <li><a href="05.Archive.html">Archive</a></li>
+                    <li><a href="06.Contacts.html">Contacts</a></li>
+                </ul>
+            </nav>
         </section>
-        <footer>
+    </header>
+    <section id="main">
+        <h2>team elysium</h2>
+        <article>
+            This is a project of Team Elysium from Sofware University Bulgaria. Our mission is to have fun coding HTML and CSS. Below can be seen the team members and their names. We all thank SoftUni for the opportunity to be creative and this website is the following evidence. If you feel you know a lot about programming and computers try to solve some solutions at their <a href="http://judge.softuni.bg/">Judge system </a>.
+        </article>
+        <section id="profiles">
+            <div>
+                <figcaption>Momchil Dishev</figcaption>
+                <figure id="momchil">
+                </figure>
+            </div>
+            <div>
+                <figcaption>Georgi Lambov</figcaption>
+                <figure id="georgi"></figure>
+            </div>
+            <div>
+                <figcaption>Petar Rusev</figcaption>
+                <figure id="petar"></figure>
+            </div>
+            <div>
+                <figcaption>Apostol Nikov</figcaption>
+                <figure id="apostol"></figure>
+            </div>
+            <div>
+                <figcaption>I.Ivelin</figcaption>
+                <figure id="ivelin">
+                </figure>
+            </div>
+
+        </section>
+    </section>
+    <footer>
         <nav>
             <ul>
                 <li><a href="02.MainPage.html">Home</a></li>
@@ -68,6 +67,5 @@
             </ul>
         </nav>
     </footer>
-    </div>
 </body>
 </html>
