--- a/03.About.html
+++ b/03.About.html
@@ -17,6 +17,7 @@
                     <li><a href="04.News.html">News</a></li>
                     <li><a href="05.Archive.html">Archive</a></li>
                     <li><a href="06.Contacts.html">Contacts</a></li>
+                    <li><a href="07.Game.html">Game</a></li>
                 </ul>
             </nav>
         </section>
@@ -60,6 +61,7 @@
                 <li><a href="04.News.html">News</a></li>
                 <li><a href="05.Archive.html">Archive</a></li>
                 <li><a href="06.Contacts.html">Contacts</a></li>
+                <li><a href="07.Game.html">Game</a></li>
                 <li><a href="http://validator.w3.org">
                     <img src="pictures/html-valid.png" /></a></li>
                 <li><a href="http://css-validator.org">
