new style contacts article

--- a/06.Contacts.html
+++ b/06.Contacts.html
@@ -24,9 +24,12 @@
     <section id="main">
         <article id="soft-uni">
             <h4>Software University</h4>
+            Address: 
+            <br/>
             <address>
                 Sofia, "Hadji Dimitar" quarter, 26 "Vasil Kanchev" street, Business Center "Stefan Karadza", entrance D, floor 4
             </address>
+            <br/>
             <p>Call: <span itemprop="telephone"><a href="tel:+359 899 55 55 92">+359 899 55 55 92</a></span></p>
              <p>Or send an e-mail: <a href="mailto:info@softuni.bg">info@softuni.bg</a></p>
                    <p> Visit us here-> 
@@ -35,9 +38,10 @@
         </article>
         <article id="elysium">
             <h4>Team Elysium</h4>
+             <br/>
             <p>Please, find us every Monday at about 18.00h on Software University's address.</p>
-            <p>Call: 
-                <br /><span itemprop="telephone"><a href="tel:+359 896 61 77 62">+359 896 61 77 62</a></span></p>
+             <br/>
+            <p>Call: <span itemprop="telephone"><a href="tel:+359 896 61 77 62">+359 896 61 77 62</a></span></p>
              <p>Or send an e-mail: <a href="mailto:mo.dishev@gmail.com">mo.dishev@gmail.com</a></p>
                    
         </article>
