new styles and content about and main

--- a/02.MainPage.html
+++ b/02.MainPage.html
@@ -23,7 +23,11 @@
     </header>
     <section id="main">
         <article>
-            
+            This is a team project of <span>"Elysium"</span> from Software University Bulgaria. Our mission is to have fun coding HTML and CSS. 
+            <p>We all thank Soft-Uni-bg for the opportunity to be creative and this website is the following evidence. </p>
+            <p>You can find some fresh ideas on this site along with a <span><a href="07.Game.html">java game</a></span> and some <span title="News"><a href="04.News.html">funny jokes</a></span>.</p>
+            <p>If you feel you know a lot about programming and computers try to solve some solutions at their <a href="http://judge.softuni.bg/">Judge system </a>.</p>
+        
         </article>
     </section>
     <footer>
