--- a/03.About.html
+++ b/03.About.html
@@ -25,7 +25,7 @@
     <section id="main">
         <h2>team elysium</h2>
         <article>
-            This is a project of Team Elysium from Sofware University Bulgaria. Our mission is to have fun coding HTML and CSS. Below can be seen the team members and their names. We all thank SoftUni for the opportunity to be creative and this website is the following evidence. If you feel you know a lot about programming and computers try to solve some solutions at their <a href="http://judge.softuni.bg/">Judge system </a>.
+            You can see here the team members and their names. 
         </article>
         <section id="profiles">
             <div>
