--- a/04.News.html
+++ b/04.News.html
@@ -15,7 +15,7 @@
             	    <li><a href="02.MainPage.html">Home</a></li>
                     <li><a href="03.About.html">About</a></li>
             	    <li><a href="04.News.html">News</a></li>
-                    <li><a href="05.Archive.html">Archive</a></li>
+                    <li><a href="07.Game.html">Game</a></li>
             	    <li><a href="06.Contacts.html">Contacts</a></li>
                 </ul>
             </nav>
