new funny pictures/easy-teo.png, nakov.PNG, thinker.jpg, not-valid.PNG

--- a/04.News.html
+++ b/04.News.html
@@ -3,48 +3,55 @@
 <head>
     <title>News - Team Elysium in SoftUni BG</title>
     <link href="main-styles.css" rel="stylesheet" />
-    
+
     <link href="04.News-styles.css" rel="stylesheet" />
 </head>
 <body>
     <header>
-        <h1> News </h1>
+        <h1>News </h1>
         <section id="nav">
             <nav>
                 <ul>
-            	    <li><a href="02.MainPage.html">Home</a></li>
+                    <li><a href="02.MainPage.html">Home</a></li>
                     <li><a href="03.About.html">About</a></li>
-            	    <li><a href="04.News.html">News</a></li>
+                    <li><a href="04.News.html">News</a></li>
                     <li><a href="07.Game.html">Game</a></li>
-            	    <li><a href="06.Contacts.html">Contacts</a></li>
+                    <li><a href="06.Contacts.html">Contacts</a></li>
                 </ul>
             </nav>
-    </section>
+        </section>
     </header>
     <article>
         <header>
-            <h1> Pictures and Funny Mixtures</h1>
-            <ul>
-            	<li>
-                    <figure>
+            <h1>Pictures and Funny Mixtures</h1>
+            <section id="jokes">
+                <div>
+                    <h4>- Free <span>air bagels</span> at will!</h4>
+                    <figure id="fart">
                     </figure>
-                    <figcaption>Students' Revenge</figcaption>
-                    
-            	</li>
-            	<li><span> Hold it for a day and give it away. Did you tube!</span></li>
-            </ul>
+                    <figcaption>Students' Revenge by the food isle</figcaption>
+                </div>
+                <div>
+                    <h4>- The main gate <span> is closed</span>!</h4>
+                    <figure id="entrance">
+                    </figure>
+                    <figcaption>Welcome to software university </figcaption>
+                </div>
+            </section>
         </header>
     </article>
     <footer>
         <nav>
             <ul>
-            	<li><a href="02.MainPage.html">Home</a></li>
+                <li><a href="02.MainPage.html">Home</a></li>
                 <li><a href="03.About.html">About</a></li>
-            	<li><a href="04.News.html">News</a></li>
+                <li><a href="04.News.html">News</a></li>
                 <li><a href="05.Archive.html">Archive</a></li>
-            	<li><a href="06.Contacts.html">Contacts</a></li>
-                <li><a href="http://validator.w3.org"><img src="pictures/html-valid.png" /></a></li>
-                <li><a href="http://css-validator.org"><img src="pictures/css-valid.png" /></a></li>
+                <li><a href="06.Contacts.html">Contacts</a></li>
+                <li><a href="http://validator.w3.org">
+                    <img src="pictures/html-valid.png" /></a></li>
+                <li><a href="http://css-validator.org">
+                    <img src="pictures/css-valid.png" /></a></li>
             </ul>
         </nav>
     </footer>
