new funny stories at News

--- a/04.News.html
+++ b/04.News.html
@@ -22,7 +22,6 @@
         </section>
     </header>
     <article>
-        <header>
             <h1>Pictures and Funny Mixtures</h1>
             <section id="jokes">
                 <div>
@@ -37,8 +36,19 @@
                     </figure>
                     <figcaption>Welcome to software university </figcaption>
                 </div>
+                <div>
+                    <h4>- Easy as <span> Funk</span>!</h4>
+                    <figure id="teo">
+                    </figure>
+                    <figcaption>Take it easy and learn to code!</figcaption>
+                </div>
+                <div>
+                    <h4>- Not<span> Valid</span>!?</h4>
+                    <figure id="nakov">
+                    </figure>
+                    <figcaption>!</figcaption>
+                </div>
             </section>
-        </header>
     </article>
     <footer>
         <nav>
