final before presentation

--- a/04.News.html
+++ b/04.News.html
@@ -46,7 +46,7 @@
                     <h4>- Not<span> Valid</span>!?</h4>
                     <figure id="nakov">
                     </figure>
-                    <figcaption>!</figcaption>
+                    <figcaption>-Just make it work!</figcaption>
                 </div>
             </section>
     </article>
