alt attribute added to img-s in Mainpage and 07.game.html link added to News's footer

--- a/04.News.html
+++ b/04.News.html
@@ -27,8 +27,9 @@
                 <div>
                     <h4>- Free <span>air bagels</span> at will!</h4>
                     <figure id="fart">
+                        <figcaption>Students' Revenge by the food isle</figcaption>
                     </figure>
-                    <figcaption>Students' Revenge by the food isle</figcaption>
+                    
                 </div>
                 <div>
                     <h4>- The main gate <span> is closed</span>!</h4>
@@ -44,7 +45,7 @@
                 </div>
                 <div>
                     <h4>- Not<span> Valid</span>!?</h4>
-                    <figure id="nakov">
+                    <figure id="nakov" >
                     </figure>
                     <figcaption>-Just make it work!</figcaption>
                 </div>
@@ -56,7 +57,7 @@
                 <li><a href="02.MainPage.html">Home</a></li>
                 <li><a href="03.About.html">About</a></li>
                 <li><a href="04.News.html">News</a></li>
-                <li><a href="05.Archive.html">Archive</a></li>
+                <li><a href="07.Game.html">Game</a></li>
                 <li><a href="06.Contacts.html">Contacts</a></li>
                 <li><a href="http://validator.w3.org">
                     <img src="pictures/html-valid.png" /></a></li>
