--- a/02.MainPage.html
+++ b/02.MainPage.html
@@ -38,8 +38,8 @@
             	<li><a href="04.News.html">News</a></li>
                 <li><a href="07.Game.html">Game</a></li>
             	<li><a href="06.Contacts.html">Contacts</a></li>
-                <li><a href="http://validator.w3.org"><img src="pictures/html-valid.png" /></a></li>
-                <li><a href="http://css-validator.org"><img src="pictures/css-valid.png" /></a></li>
+                <li><a href="http://validator.w3.org"><img src="pictures/html-valid.png" alt="world wide web consorcium html validator logo"/></a></li>
+                <li><a href="http://css-validator.org"><img src="pictures/css-valid.png" alt="world wide web consorcium css validator logo"/></a></li>
             </ul>
         </nav>
     </footer>
