--- a/main.html
+++ b/main.html
@@ -7,16 +7,16 @@
 <body style=" background: url(http://media3.giphy.com/media/fJ1eCBjmMoEvu/giphy.gif); background-size: 500px 500px; ">
     <div id="wrap">
         <p>We are team Elysium...</p>
-        <a class="redlink" href="02.MainPage.html">
+        <a class="redlink" href="jokes.html">
             <div id="red">
                 <p id="left"> Would you like to check our HTML/CSS homeworks and find out how deep the %^&#hole is?</p>
             </div>
         </a>
-        <a id="bluelink" href="">
+        <a id="bluelink" href="02.MainPage.html">
             <div id="blue">
                 <p id="right"> Or do you want to wake up and see that you don't have maximum points?</p>
             </div>
         </a>
     </div>
 </body>
-</html>Â
+</html>
