News html- valid checked

--- a/04.News.html
+++ b/04.News.html
@@ -22,34 +22,41 @@
         </section>
     </header>
     <article>
-            <h1>Pictures and Funny Mixtures</h1>
-            <section id="jokes">
-                <div>
-                    <h4>- Free <span>air bagels</span> at will!</h4>
-                    <figure id="fart">
-                        <figcaption>Students' Revenge by the food isle</figcaption>
-                    </figure>
-                    
-                </div>
-                <div>
-                    <h4>- The main gate <span> is closed</span>!</h4>
-                    <figure id="entrance">
-                    </figure>
+        <h1>Pictures and Funny Mixtures</h1>
+        <section id="jokes">
+            <div>
+                <h4>- Free <span>air bagels</span> at will!</h4>
+                <figure>
+                    <img class="fart" src="pictures/revenge.jpg" alt="A hanger hanging out of a toilets ventilation tube up on the wall above someone's head" />
+                    <figcaption>Students' Revenge by the food isle</figcaption>
+                </figure>
+
+            </div>
+            <div>
+                <h4>- The main gate <span>is closed</span>!</h4>
+                <figure>
+                    <img class="entrance" src="pictures/entrance.jpg" alt="A sign on a sheet of paper saying to look for the entrance at the back of the building after five PM. " />
                     <figcaption>Welcome to software university </figcaption>
-                </div>
-                <div>
-                    <h4>- Easy as <span> Funk</span>!</h4>
-                    <figure id="teo">
-                    </figure>
+                </figure>
+
+            </div>
+            <div>
+                <h4>- Easy as <span>Funk</span>!</h4>
+                <figure>
+                    <img src="pictures/easy-teo.png" alt="A guy dressed as a Hawaii girl with a cocktail in hand says that the shown long sequence of characters for a regular expression phone number pattern is not that sophisticated or unexpected." />
                     <figcaption>Take it easy and learn to code!</figcaption>
-                </div>
-                <div>
-                    <h4>- Not<span> Valid</span>!?</h4>
-                    <figure id="nakov" >
-                    </figure>
+                </figure>
+
+            </div>
+            <div>
+                <h4>- Not<span> Valid</span>!?</h4>
+                <figure>
+                    <img src="pictures/not-valid.png" alt="A guy screaming mandly at a piece of code which doens't get validated by the developer's environment. He admits to be mistaken about the validation of the html tag by browsers." />
                     <figcaption>-Just make it work!</figcaption>
-                </div>
-            </section>
+                </figure>
+
+            </div>
+        </section>
     </article>
     <footer>
         <nav>
@@ -60,9 +67,9 @@
                 <li><a href="07.Game.html">Game</a></li>
                 <li><a href="06.Contacts.html">Contacts</a></li>
                 <li><a href="http://validator.w3.org">
-                    <img src="pictures/html-valid.png" /></a></li>
+                    <img src="pictures/html-valid.png" alt="world wide web consorcium html validator logo" /></a></li>
                 <li><a href="http://css-validator.org">
-                    <img src="pictures/css-valid.png" /></a></li>
+                    <img src="pictures/css-valid.png" alt="world wide web consorcium css validator logo" /></a></li>
             </ul>
         </nav>
     </footer>
