alt attribute added to img-s footer

--- a/03.About.html
+++ b/03.About.html
@@ -62,9 +62,9 @@
                 <li><a href="07.Game.html">Game</a></li>
                 <li><a href="06.Contacts.html">Contacts</a></li>
                 <li><a href="http://validator.w3.org">
-                    <img src="pictures/html-valid.png" /></a></li>
+                    <img src="pictures/html-valid.png" alt="world wide web consorcium html validator logo"/></a></li>
                 <li><a href="http://css-validator.org">
-                    <img src="pictures/css-valid.png" /></a></li>
+                    <img src="pictures/css-valid.png" alt="world wide web consorcium css validator logo"/></a></li>
             </ul>
         </nav>
     </footer>
