Contacts html valid checked and Entrance "alt" added

--- a/06.Contacts.html
+++ b/06.Contacts.html
@@ -30,18 +30,18 @@
                 Sofia, "Hadji Dimitar" quarter, 26 "Vasil Kanchev" street, Business Center "Stefan Karadza", entrance D, floor 4
             </address>
             <br/>
-            <p>Call: <span itemprop="telephone"><a href="tel:+359 899 55 55 92">+359 899 55 55 92</a></span></p>
+            <p>Call: <span>+359 899 55 55 92</span></p>
              <p>Or send an e-mail: <a href="mailto:info@softuni.bg">info@softuni.bg</a></p>
                    <p> Visit us here-> 
                     <a href="http://https://softuni.bg" title="SoftUni BG Website">
-                    <img id="softuni" src="pictures/softuni-logo.png" /></a></p>
+                    <img id="softuni" src="pictures/softuni-logo.png" alt="SoftUni Bulgaria logo - Square academic cap "/></a></p>
         </article>
         <article id="elysium">
             <h2>Team Elysium</h2>
              <br/>
             <p>Please, find us every Monday at about 18.00h on Software University's address.</p>
              <br/>
-            <p>Call: <span itemprop="telephone"><a href="tel:+359 896 61 77 62">+359 896 61 77 62</a></span></p>
+            <p>Call: <span>+359 896 61 77 62</span></p>
              <p>Or send an e-mail: <a href="mailto:mo.dishev@gmail.com">mo.dishev@gmail.com</a></p>
                    
         </article>
