--- a/01.Entrance.html
+++ b/01.Entrance.html
@@ -1,4 +1,4 @@
-﻿<DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Entrance - Team Elysium in SoftUni BG</title>
