some responsive design added and other little correction

--- a/03.About.html
+++ b/03.About.html
@@ -22,7 +22,7 @@
             </nav>
         </section>
     </header>
-    <section id="main">
+    <section class="main">
         <h2>team elysium</h2>
         <article>
             You can see here the team members and their names. 
