--- a/02.MainPage.html
+++ b/02.MainPage.html
@@ -1,47 +1,58 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="UTF-8"/>
+    <meta name="description" content="Team Elysium codes for fun and this project is the evidence.">
+    <meta name="robots" content="all"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"/>
+    <link href="main-styles.css" rel="stylesheet"/>
+    <link href="02.MainPage-styles.css" rel="stylesheet"/>
     <title>MainPage - Team Elysium in SoftUni BG</title>
-    <link href="main-styles.css" rel="stylesheet" />
-    <link href="02.MainPage-styles.css" rel="stylesheet" />
 </head>
 <body>
+<div id="wrapper">
     <header>
         <h1> Main Page - Elysium in SoftUni - BG</h1>
         <section id="nav">
             <nav>
                 <ul>
-            	    <li><a href="02.MainPage.html">Home</a></li>
+                    <li><a href="02.MainPage.html">Home</a></li>
                     <li><a href="03.About.html">About</a></li>
-            	    <li><a href="04.News.html">News</a></li>
-                    <li><a href="05.Archive.html">Archive</a></li>
-            	    <li><a href="06.Contacts.html">Contacts</a></li>
-					<li><a href="07.Game.html">Game</a></li>
+                    <li><a href="04.News.html">News</a></li>
+                    <li><a href="06.Contacts.html">Contacts</a></li>
+                    <li><a href="07.Game.html">Game</a></li>
                 </ul>
             </nav>
-    </section>
+        </section>
     </header>
-    <section id="main">
-        <article>
-            This is a team project of <span>"Elysium"</span> from Software University Bulgaria. Our mission is to have fun coding HTML and CSS. 
-            <p>We all thank Soft-Uni-bg for the opportunity to be creative and this website is the following evidence. </p>
-            <p>You can find some fresh ideas on this site along with a <span><a href="07.Game.html">java game</a></span> and some <span title="News"><a href="04.News.html">funny jokes</a></span>.</p>
-            <p>If you feel you know a lot about programming and computers try to solve some solutions at their <a href="http://judge.softuni.bg/">Judge system </a>.</p>
-        
-        </article>
-    </section>
+    <article id="main">
+        <h4>This is a team project of <span>"Elysium"</span> from Software University Bulgaria. </h4>
+
+        <p>+Our mission is to have fun coding HTML and CSS.</p>
+
+        <p>+We all thank Soft-Uni-bg for the opportunity to be creative and this website is the following evidence. </p>
+
+        <p>+You can find some fresh ideas on this site along with a <span><a href="07.Game.html">java game</a></span> and some <span title="News"><a href="04.News.html">funny jokes</a></span>.</p>
+
+        <p>+If you feel you know a lot about programming and computers try to solve some solutions at SoftUni's <a
+                href="http://judge.softuni.bg/">Judge system </a>.</p>
+    </article>
     <footer>
         <nav>
             <ul>
-            	<li><a href="02.MainPage.html">Home</a></li>
+                <li><a href="02.MainPage.html">Home</a></li>
                 <li><a href="03.About.html">About</a></li>
-            	<li><a href="04.News.html">News</a></li>
+                <li><a href="04.News.html">News</a></li>
                 <li><a href="07.Game.html">Game</a></li>
-            	<li><a href="06.Contacts.html">Contacts</a></li>
-                <li><a href="http://validator.w3.org"><img src="pictures/html-valid.png" alt="world wide web consorcium html validator logo"/></a></li>
-                <li><a href="http://css-validator.org"><img src="pictures/css-valid.png" alt="world wide web consorcium css validator logo"/></a></li>
+                <li><a href="06.Contacts.html">Contacts</a></li>
+                <li><a href="http://validator.w3.org">
+                    <img src="pictures/html-valid.png" alt="world wide web consortium html validator logo"/></a></li>
+                <li><a href="http://css-validator.org"><img src="pictures/css-valid.png"
+                                                            alt="world wide web consortium css validator logo"/></a>
+                </li>
             </ul>
         </nav>
     </footer>
+</div>
 </body>
 </html>
