--- a/03.About.html
+++ b/03.About.html
@@ -1,72 +1,75 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="UTF-8"/>
+    <meta name="description" content="About the team work project">
+    <meta name="robots" content="all"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"/>
+    <link href="main-styles.css" rel="stylesheet"/>
     <title>About - Team Elysium in SoftUni BG</title>
-    <link href="main-styles.css" rel="stylesheet" />
-    <link href="03.About-styles.css" rel="stylesheet" />
-
+    <link href="main-styles.css" rel="stylesheet"/>
+    <link href="03.About-styles.css" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <h1>About </h1>
-        <section id="nav">
-            <nav>
-                <ul>
-                    <li><a href="02.MainPage.html">Home</a></li>
-                    <li><a href="03.About.html">About</a></li>
-                    <li><a href="04.News.html">News</a></li>
-                    
-                    <li><a href="06.Contacts.html">Contacts</a></li>
-                    <li><a href="07.Game.html">Game</a></li>
-                </ul>
-            </nav>
-        </section>
-    </header>
-    <section class="main">
-        <h2>team elysium</h2>
-        <article>
-            You can see here the team members and their names. 
-        </article>
-        <section id="profiles">
-            <div>
-                <figcaption>Momchil Dishev</figcaption>
-                <figure id="momchil">
-                </figure>
-            </div>
-            <div>
-                <figcaption>Georgi Lambov</figcaption>
-                <figure id="georgi"></figure>
-            </div>
-            <div>
-                <figcaption>Petar Rusev</figcaption>
-                <figure id="petar"></figure>
-            </div>
-            <div>
-                <figcaption>Apostol Nikov</figcaption>
-                <figure id="apostol"></figure>
-            </div>
-            <div>
-                <figcaption>I.Ivelin</figcaption>
-                <figure id="ivelin">
-                </figure>
-            </div>
-
-        </section>
-    </section>
-    <footer>
+<header>
+    <h1>About </h1>
+    <section id="nav">
         <nav>
             <ul>
                 <li><a href="02.MainPage.html">Home</a></li>
                 <li><a href="03.About.html">About</a></li>
                 <li><a href="04.News.html">News</a></li>
-                <li><a href="07.Game.html">Game</a></li>
+
                 <li><a href="06.Contacts.html">Contacts</a></li>
-                <li><a href="http://validator.w3.org">
-                    <img src="pictures/html-valid.png" alt="world wide web consorcium html validator logo"/></a></li>
-                <li><a href="http://css-validator.org">
-                    <img src="pictures/css-valid.png" alt="world wide web consorcium css validator logo"/></a></li>
+                <li><a href="07.Game.html">Game</a></li>
             </ul>
         </nav>
-    </footer>
+    </section>
+</header>
+<section class="main">
+    <h2>team elysium</h2>
+    <section id="profiles">
+        <h3>You can see here the team members and their names.</h3>
+
+        <div>
+            <figcaption>Momchil Dishev</figcaption>
+            <figure id="momchil">
+            </figure>
+        </div>
+        <div>
+            <figcaption>Georgi Lambov</figcaption>
+            <figure id="georgi"></figure>
+        </div>
+        <div>
+            <figcaption>Petar Rusev</figcaption>
+            <figure id="petar"></figure>
+        </div>
+        <div>
+            <figcaption>Apostol Nikov</figcaption>
+            <figure id="apostol"></figure>
+        </div>
+        <div>
+            <figcaption>I.Ivelin</figcaption>
+            <figure id="ivelin">
+            </figure>
+        </div>
+
+    </section>
+</section>
+<footer>
+    <nav>
+        <ul>
+            <li><a href="02.MainPage.html">Home</a></li>
+            <li><a href="03.About.html">About</a></li>
+            <li><a href="04.News.html">News</a></li>
+            <li><a href="07.Game.html">Game</a></li>
+            <li><a href="06.Contacts.html">Contacts</a></li>
+            <li><a href="http://validator.w3.org">
+                <img src="pictures/html-valid.png" alt="world wide web consortium html validator logo"/></a></li>
+            <li><a href="http://css-validator.org">
+                <img src="pictures/css-valid.png" alt="world wide web consortium css validator logo"/></a></li>
+        </ul>
+    </nav>
+</footer>
 </body>
 </html>
