--- a/04.News.html
+++ b/04.News.html
@@ -1,64 +1,17 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="UTF-8"/>
+    <meta name="description" content="Funny content and jokes about SoftUni">
+    <meta name="robots" content="all"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"/>
     <title>News - Team Elysium in SoftUni BG</title>
-    <link href="main-styles.css" rel="stylesheet" />
-
-    <link href="04.News-styles.css" rel="stylesheet" />
+    <link href="main-styles.css" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <h1>News </h1>
-        <section id="nav">
-            <nav>
-                <ul>
-                    <li><a href="02.MainPage.html">Home</a></li>
-                    <li><a href="03.About.html">About</a></li>
-                    <li><a href="04.News.html">News</a></li>
-                    <li><a href="07.Game.html">Game</a></li>
-                    <li><a href="06.Contacts.html">Contacts</a></li>
-                </ul>
-            </nav>
-        </section>
-    </header>
-    <article>
-        <h1>Pictures and Funny Mixtures</h1>
-        <section id="jokes">
-            <div>
-                <h4>- Free <span>air bagels</span> at will!</h4>
-                <figure>
-                    <img class="fart" src="pictures/revenge.jpg" alt="A hanger hanging out of a toilets ventilation tube up on the wall above someone's head" />
-                    <figcaption>Students' Revenge by the food isle</figcaption>
-                </figure>
-
-            </div>
-            <div>
-                <h4>- The main gate <span>is closed</span>!</h4>
-                <figure>
-                    <img class="entrance" src="pictures/entrance.jpg" alt="A sign on a sheet of paper saying to look for the entrance at the back of the building after five PM. " />
-                    <figcaption>Welcome to software university </figcaption>
-                </figure>
-
-            </div>
-            <div>
-                <h4>- Easy as <span>Funk</span>!</h4>
-                <figure>
-                    <img src="pictures/easy-teo.png" alt="A guy dressed as a Hawaii girl with a cocktail in hand says that the shown long sequence of characters for a regular expression phone number pattern is not that sophisticated or unexpected." />
-                    <figcaption>Take it easy and learn to code!</figcaption>
-                </figure>
-
-            </div>
-            <div>
-                <h4>- Not<span> Valid</span>!?</h4>
-                <figure>
-                    <img src="pictures/not-valid.png" alt="A guy screaming mandly at a piece of code which doens't get validated by the developer's environment. He admits to be mistaken about the validation of the html tag by browsers." />
-                    <figcaption>-Just make it work!</figcaption>
-                </figure>
-
-            </div>
-        </section>
-    </article>
-    <footer>
+<header>
+    <h1>News </h1>
+    <section id="nav">
         <nav>
             <ul>
                 <li><a href="02.MainPage.html">Home</a></li>
@@ -66,12 +19,64 @@
                 <li><a href="04.News.html">News</a></li>
                 <li><a href="07.Game.html">Game</a></li>
                 <li><a href="06.Contacts.html">Contacts</a></li>
-                <li><a href="http://validator.w3.org">
-                    <img src="pictures/html-valid.png" alt="world wide web consorcium html validator logo" /></a></li>
-                <li><a href="http://css-validator.org">
-                    <img src="pictures/css-valid.png" alt="world wide web consorcium css validator logo" /></a></li>
             </ul>
         </nav>
-    </footer>
+    </section>
+</header>
+<article>
+    <h2>Pictures and Funny Mixtures</h2>
+    <section id="jokes">
+        <div>
+            <h4>- Free <span>air bagels</span> at will!</h4>
+            <figure>
+                <img class="fart" src="pictures/revenge.jpg"
+                     alt="A hanger hanging out of a toilets ventilation tube up on the wall above someone's head"/>
+                <figcaption>Students' Revenge by the food isle</figcaption>
+            </figure>
+
+        </div>
+        <div>
+            <h4>- The main gate <span>is closed</span>!</h4>
+            <figure>
+                <img class="entrance" src="pictures/entrance.PNG"
+                     alt="A sign on a sheet of paper saying to look for the entrance at the back of the building after five o'clock in the afternoon. "/>
+                <figcaption>Welcome to software university</figcaption>
+            </figure>
+
+        </div>
+        <div>
+            <h4>- Easy as <span>Funk</span>!</h4>
+            <figure>
+                <img src="pictures/easy-teo.png"
+                     alt="(Kurtev)A guy dressed as a Hawaii girl with a cocktail in hand says that the shown long sequence of characters for a regular expression phone number pattern is not that sophisticated or unexpected."/>
+                <figcaption>Take it easy and learn to code!</figcaption>
+            </figure>
+
+        </div>
+        <div>
+            <h4>- Not<span> Valid</span>!?</h4>
+            <figure>
+                <img src="pictures/not-valid.png"
+                     alt="Svetlin Nakov with a dark-green wit is screaming madly at a piece of code which doesn't get validated by the developer's environment. He admits to be mistaken about the validation of the html tag by browsers."/>
+                <figcaption>-Just make it work!</figcaption>
+            </figure>
+        </div>
+    </section>
+</article>
+<footer>
+    <nav>
+        <ul>
+            <li><a href="02.MainPage.html">Home</a></li>
+            <li><a href="03.About.html">About</a></li>
+            <li><a href="04.News.html">News</a></li>
+            <li><a href="07.Game.html">Game</a></li>
+            <li><a href="06.Contacts.html">Contacts</a></li>
+            <li><a href="http://validator.w3.org">
+                <img src="pictures/html-valid.png" alt="world wide web consortium html validator logo"/></a></li>
+            <li><a href="http://css-validator.org">
+                <img src="pictures/css-valid.png" alt="world wide web consortium css validator logo"/></a></li>
+        </ul>
+    </nav>
+</footer>
 </body>
 </html>
